tests/errors/matrix_singular.ki
discard import("matrix").Matrix([[1, 2], [2, 4]]).inverse()
